ipc/ipdl/test/ipdl/error/noEmptyToplevel.ipdl
//error: top-level protocol `noEmptyToplevel' cannot be empty

protocol noEmptyToplevel {

    // it's an error for top-level protocols to be empty

};
